# TicketToken-Platform-Backend

./: .env.example  .gitignore  .pre-commit-config.yaml  BLOCKCHAIN_IMPLEMENTATION_PLAN.md  BLOCKCHAIN_INTEGRATION_REMEDIATION.md  CLAUDE.md  CLINE_MIGRATION_AUDIT.md  CODEBASE_AUDIT.md  COMPLETE_AUDIT_SUMMARY.md  DEPLOYMENT_INFO.md  Dockerfile  Dockerfile.base  MASTER_AUDIT_REPORT.md  Makefile  PHASE1_BASELINE_SCHEMA_ANALYSIS.md  PHASE2_RLS_MIGRATION_MAP.md  PHASE3_INTERNAL_API_PLAN.md  PHASE4_CLIENT_INVENTORY.md  PHASE5_BYPASS_REFACTOR_PLAN.md  PHASE6_ORPHAN_TABLE_PLAN.md  PORT_ASSIGNMENTS.md  PRIMARY_PURCHASE_FLOW_AUDIT.md  PRODUCTION_READINESS_REMEDIATION_PLAN.md  README.md  REMEDIATION_PLAN.md  SERVICE_BYPASS_ANALYSIS.md  TICKET_TRANSFER_GIFT_FLOW_AUDIT.md  TODO_REPORT.md  VENUE_ONBOARDING_FLOW_AUDIT.md  VENUE_SERVICE_MIGRATION_AUDIT.md  WEEK_3_IMPLEMENTATION_SUMMARY.md  analyze_mongodb_strategy.sh  blockchain-service-test-results.txt  docker-compose.yml  docker-compose.yml.backup2  docker-startup.sh  docker-test.sh  ecosystem.config.js  fix-all-db-ports.sh  investigate_mongodb.sh  (+22 more)
smart-contracts/programs/marketplace/: Cargo.toml
smart-contracts/programs/marketplace/src/: errors.rs  lib.rs  tests.rs
smart-contracts/programs/marketplace/src/instructions/: buy_listing.rs  cancel_listing.rs  create_listing.rs  initialize_marketplace.rs  mod.rs
smart-contracts/programs/marketplace/src/state/: listing.rs  marketplace.rs  mod.rs  (+1 more)
smart-contracts/programs/tickettoken/: Cargo.toml
smart-contracts/programs/tickettoken/src/: constants.rs  errors.rs  lib.rs
(+7198 files in other folders)
