[package]
name = "tickettoken"
version = "0.1.0"
description = "TicketToken NFT Ticketing Platform"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
mpl-bubblegum = "1.4.0"
spl-account-compression = { version = "0.3.0", features = ["no-entrypoint"] }
spl-concurrent-merkle-tree = "0.2.0"
spl-noop = "0.2.0"

# Add marketplace as dependency for CPI
